<resources>
    <string name="app_name">eStats</string>
    <string name="shared_pref">shared_pref</string>
    <string name="activateGPS">Please activate GPS</string>
    <!-- Shared Pref key -->
    <string name="saved_current_time_ms">saved_current_time_ms</string>
    <string name="saved_location_lat">saved_location_lat</string>
    <string name="saved_location_lon">saved_location_lon</string>
    <!-- Navigation -->
    <string name="splashFragmentLabel">SplashScreen</string>
    <string name="requestPositionFragmentLabel">Need permission</string>
    <string name="mainFragmentLabel">eStats</string>
    <string name="mapFragmentLabel">Detail map</string>
    <!-- Fragment Labels -->
    <string name="centerView">Center view</string>
    <string name="showMap">Show Map</string>
    <string name="currentPositionLabel">Current position</string>
    <string name="latitudeLabel">Latitude</string>
    <string name="longitudeLabel">Longitude</string>
    <string name="altitudeLabel">Altitude</string>
    <string name="matchingLocationLabel">Current Location</string>
    <string name="matchingSubLocationLabel">Sub Location </string>
    <!-- Texts -->
    <string name="permission_explain">This app is using gps permission to work. Please authorize</string>
    <string name="askPermission">Ask location permission</string>
    <string name="permissionGpsTitle">Permission needed</string>
    <string name="permissionGpsMessage">We need location for auto-detection</string>
    <string name="permissionGpsOk">Go to settings</string>
    <string name="permissionGpsCancel">Cancel</string>
    <!-- Shared Pref -->
    <string name="globalPref">globalPref</string>
    <string name="isFirstLaunch">isFirstLaunch</string>
    <!-- custom Dialog -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="addNewPositionTitle">Add a new position</string>
    <string name="addNewPositionToMainTitle">Add a new position to : %1$s</string>
    <string name="nameChoosen">Name</string>
    <string name="addNewSubPositionTitle">Add a new sub position to</string>
    <string name="alertMessage">Impossible to add : you are not in the area</string>
    <string name="nameEmpty">Please enter a valid name</string>
    <!-- Service -->
    <string name="foregroundTitle">eStats</string>
    <string name="foregroundContext">The app needs your local position when it is in background.</string>
    <string name="foregroundActionButton">Stop that !</string>
    <!-- nav graph -->
    <string name="menu_tab1_title">Home</string>
    <string name="menu_tab1_description">This is your home</string>
    <string name="menu_tab2_title">Map</string>
    <string name="menu_tab2_description">This is your map</string>

    <string name="exitAppTitle">Exit app</string>
    <string name="exitAppBody">Do you want to quit app ?</string>
</resources>