<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainViewModel"
            type="com.amarchaud.estats.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainFragment">


        <LinearLayout
            android:id="@+id/topArea"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <org.osmdroid.views.MapView
                android:id="@+id/mapView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TableRow>

                    <TextView
                        android:id="@+id/currentDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{MainViewModel.currentDate}" />
                </TableRow>


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentLatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitudeLabel" />

                    <TextView
                        android:id="@+id/currentLatitudeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentLongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitudeLabel" />

                    <TextView
                        android:id="@+id/currentLongitudeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/currentAltitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altitudeLabel" />

                    <TextView
                        android:id="@+id/currentAltitudeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentMatchingLocationName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matchingLocationLabel" />

                    <TextView
                        android:id="@+id/currentArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{MainViewModel.matchingLocation.name}" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentMatchingSubLocationName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matchingSubLocationLabel" />

                    <TextView
                        android:id="@+id/currentSubArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{MainViewModel.matchingSubLocation.name}" />

                </TableRow>


            </TableLayout>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/mainFloatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topArea" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addCustomPositionActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:onClick="@{(v) -> MainViewModel.onDisplayContacts(v)}"
            android:src="@drawable/bonuspack_bubble"
            app:layout_constraintBottom_toBottomOf="@+id/mainFloatingActionButton"
            app:layout_constraintEnd_toEndOf="@+id/mainFloatingActionButton"
            app:layout_constraintStart_toStartOf="@+id/mainFloatingActionButton"
            app:layout_constraintTop_toTopOf="@+id/mainFloatingActionButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addMyPositionActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:onClick="@{(v) -> MainViewModel.onAddCurrentPosition(v)}"
            android:src="@drawable/zoom_in"
            app:layout_constraintBottom_toBottomOf="@+id/mainFloatingActionButton"
            app:layout_constraintEnd_toEndOf="@+id/mainFloatingActionButton"
            app:layout_constraintStart_toStartOf="@+id/mainFloatingActionButton"
            app:layout_constraintTop_toTopOf="@+id/mainFloatingActionButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/osm_ic_center_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <NumberPicker
            android:id="@+id/typeDisplayedPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerviewItems" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>